<resources>
    <string name="app_name">Quiz App</string>
    <string name="q1">Q1. When did this course began ?</string>
    <string name="q2">Q2. Name the scholar who was selected \n\t\t\tfrom the Android basics track to visit \n\t\t\tGoogle I/O 2018 ?</string>
    <string name="q3">Q3. How many collabarative projects are \n\t\t\tthere ?</string>
    <string name="q4">Q4. What does AMA stand for ?</string>
    <string name="q5">Q5. Who among the following are our\n\t \t\tforum mentors ?</string>
    <string name="et">Enter full name</string>
    <string name="q1o1">Valentine\'s Day</string>
    <string name="q1o2">Chocolate Day</string>
    <string name="q1o3">Teacher\'s Day</string>
    <string name="q1o4">Promise Day</string>
    <string name="q3o1">5</string>
    <string name="q3o2">6</string>
    <string name="q3o3">7</string>
    <string name="q3o4">8</string>
    <string name="q4o1">Ask Moderator Anything</string>
    <string name="q4o2">Ask Me Answers</string>
    <string name="q4o3">Ask Me Anything</string>
    <string name="q4o4">Askers meet Answers</string>
    <string name="q5o1">Lyla Fujiwara</string>
    <string name="q5o2">Abhishek Raj</string>
    <string name="q5o3">Nisha Shinde</string>
    <string name="q5o4">Katherine Kuan</string>
    <string name="bu1"> \tSubmit and Check\t</string>
</resources>
