<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/download"
tools:context=".MainActivity">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/question_margin"
                android:textColor="@color/textcolor"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioGroup
                android:id="@+id/ques1_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o1"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o2"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o3"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1o4"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        app:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/textcolor"
                android:layout_margin="@dimen/question_margin"
                android:textAppearance="?android:textAppearanceMedium"/>
            <EditText
                android:id="@+id/card2_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor"
                android:layout_margin="@dimen/edittext_margin"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:layout_margin="@dimen/question_margin"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioGroup
                android:id="@+id/ques3_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3o1"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3o2"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3o3"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3o4"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_gravity="center"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:layout_margin="@dimen/question_margin"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioGroup
                android:id="@+id/ques4_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4o1"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4o2"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4o3"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4o4"
                    android:textColor="@color/textcolor"
                    android:paddingLeft="@dimen/radiobutton_padding"
                    android:textAppearance="?android:textAppearanceMedium"/>
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view5"
        android:layout_gravity="center"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:text="@string/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:layout_margin="@dimen/question_margin"
                android:textAppearance="?android:textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/card5_ch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5o1"
                android:textColor="@color/textcolor"
                android:paddingLeft="@dimen/radiobutton_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/card5_ch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5o2"
                android:textColor="@color/textcolor"
                android:paddingLeft="@dimen/radiobutton_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/card5_ch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5o3"
                android:textColor="@color/textcolor"
                android:paddingLeft="@dimen/radiobutton_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/card5_ch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5o4"
                android:textColor="@color/textcolor"
                android:paddingLeft="@dimen/radiobutton_padding"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/bu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bu1"
        android:textColor="@color/textcolor"
        android:background="@color/colorPrimary"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:onClick="ButtonClick"/>

</LinearLayout>
</ScrollView>